Internal state
* endpoint (construct time)
* remote

Input signals
* activate
* discovery
* fail
* physical-down
* bfd-up
* bfd-down
* bfd-kill
* round-trip-status

Ouput signals
* isl-move
* isl-up
* isl-down
* isl-history
* physical-down
* round-trip-status

@startuml
title UniISL FSM

[*] --> INIT

INIT --> UNKNOWN : activate
INIT : activate [have-history] / set remote, emit emit isl-history

state moveChoice <<choice>>

UNKNOWN --> moveChoice : discovery
UNKNOWN --> DOWN : fail
UNKNOWN --> DOWN : physical-down

UP --> moveChoice : discovery
UP --> DOWN : fail
UP --> DOWN : physical-down
UP --> BFD : bfd-up
UP : enter [have speaker event] / set remote
UP : enter [have speaker event] / emit isl-up
UP : round-trip-status / emit round-trip-status

state selfLoopChoice <<choice>>

moveChoice --> UP : [remote not changed]
moveChoice --> selfLoopChoice : [remote is changed] / emit isl-move

selfLoopChoice --> UP : [else]
selfLoopChoice -r-> UNKNOWN : [self-loop]

DOWN --> moveChoice : discovery
DOWN --> BFD : bfd-up
DOWN : enter [has remote] / emit isl-down
DOWN : round-trip-status / emit round-trip-status

BFD --> DOWN : physical-down
BFD --> DOWN : bfd-down
BFD --> UP : bfd-kill
BFD : enter / emit isl-up
BFD : round-trip-status / emit round-trip-status

@enduml
